tests/script_errors/double_const/error.txt
Error: 
    2 | const one = "two";
      | ^^^^^^^^^^^^^^^^^ Can't define the constant `one` twice